<resources>
    <string name="app_name">Expenses by Klaudia</string>
    <string name="repository_host">https://expenses-by-klaudia.azurewebsites.net</string>
    <string name="account_type">net.azurewebsites.expenses_by_klaudia</string>
    <string name="main_token_type">Manage your expenses</string>

    <string name="prompt_login">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_up">Sign up</string>
    <string name="error_invalid_login">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_credentials">The login or password is incorrect</string>
    <string name="error_user_already_exists">This login already exists</string>
    <string name="error_other">An unexpected error has occurred</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_field_too_short">This field should contain at least %d characters</string>
    <string name="error_login_bad_format">This field can contain only letters, digits and one of the following characters: - ._~</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_go_to_log_in">Go to log in</string>
    <string name="action_go_to_sign_up">Go to sign up</string>
    <string name="prompt_weight">Weight (kg)</string>
    <string name="prompt_height">Height (cm)</string>
    <string name="spinner_female">female</string>
    <string name="spinner_male">male</string>
    <string name="prompt_gender">Gender</string>
    <string name="prompt_name">Name</string>
    <string name="action_pick_date">Pick a date</string>
    <string name="prompt_pal">Physical Activity Level</string>
    <string name="pal_description">please rate your activity:\n
    0 - sedentary\n
    3 - physical work / running 1h a day\n
    6 - hard physical work / swimming 2h a day\n
    10 - athlete</string>
    <string name="prompt_how_much_money">How much money you have in your bank account, cash etc.</string>
    <string name="prompt_wallet_name">Name, eg. \"Cash EUR\"</string>
    <string name="prompt_wallet_money">Money</string>
    <string name="action_add_wallet">Add wallet</string>
    <string name="action_configure">Configure</string>
    <string name="error_field_not_decimal">Field should contain a decimal value, eg. 5.90</string>
    <string name="error_field_not_in_range">The value should be in range %f and %f</string>
    <string name="error_field_min_value">The minimal value for this field is %f</string>
    <string name="error_field_max_value">The maximal value for this field is %f</string>
    <string name="error_invalid_name">The name can contain only letters on the baginning and then also spaces and hypen (-) character</string>
    <string name="error_invalid_date">The date should match YYYY-MM-DD pattern</string>
    <string name="error_incorrect_date">The value is not a correct date, please check if such a date exists in a calendar.</string>
    <string name="error_no_wallets">Please add at least one wallet</string>
    <string name="title_activity_homepage">HomepageActivity</string>
    <string name="title_section_profile">Profile</string>
    <string name="title_section_household">Household</string>
    <string name="title_section_categories">Categories</string>
    <string name="title_section_summary">Summary</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_logout">Logout</string>
    <string name="prompt_date_of_birth">Date of birth</string>
    <string name="prompt_date">Date</string>
    <string name="prompt_category">Category</string>
    <string name="prompt_wallet">Wallet</string>
    <string name="add_expenses_choosen_expenses">Please specify choosen expenses from this bill</string>
    <string name="prompt_comment">Comment (optionally)</string>
    <string name="action_add_detail">Add detailed info</string>
    <string name="action_add_bill">Add bill</string>
    <string name="error_add_expenses_cannot_download_data">Unable to add expenses - cannot download categories and wallets. Please check your network connection or log out and log in.</string>
    <string name="error_add_expenses_wrong_details">Your detailed list has greater sum than declared sum on the bill</string>
    <string name="action_log_in">Log in</string>
    <string name="homepage_household_expenses">Household\'s expenses</string>
    <string name="homepage_household_money">Household\'s money</string>
    <string name="homepage_user_expenses">User\'s expenses</string>
    <string name="homepage_user_money">User\'s money</string>
    <string name="summary_info_no_debts">Congratulations! You have no debts.</string>
    <string name="summary_info_debt">You have debt of</string>
    <string name="summary_info_lending">has lent</string>
    <string name="homepage_user_charges">User\'s charges</string>
    <string name="summary_info_no_expenses">You don\'t have any expenses yet</string>
    <string name="action_delete_account">Delete account</string>
    <string name="profile_info_account_deleted">Your accout has been removed.</string>
    <string name="prompt_add_category">Add a category</string>
    <string name="action_add_category">Add category</string>
    <string name="error_categories_cant_download">Can\'t download list of categories.</string>
    <string name="error_invalid_category_name">The category name should begin with at least 3 word characters.</string>
    <string name="title_section_invitations">Invitations</string>
    <string name="invitations_invite_to_household">Invite to household</string>
    <string name="action_invite">Invite this person</string>
    <string name="household_info_no_members">You don\'t belong to any household yet. Why don\'t you invite someone?</string>
    <string name="action_go_to_invitations">Go to invitations</string>
    <string name="action_accept_invitation">Accept invitation</string>
    <string name="error_cant_download_invitations">An error occured while trying to download new invitations</string>
    <string name="info_accepted">Successfully accepted the invitation. Now you belong to the household</string>
    <string name="into_invitation_sent">Successfully sent the invitation. Now please wait for acceptation</string>
    <string name="action_reject_invitation">Reject invitation</string>
    <string name="error_cant_download_members">An unspecified error occured while trying to download household\'s members</string>
    <string name="action_refresh_summary">Sync</string>
    <string name="summary_info_charges">Wait for charges to be recalculated.</string>
    <string name="summary_info_sync">Please sync to see results</string>
    <string name="summary_hello_login">Hello, %s!</string>
</resources>
