<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddExpensesActivity">

    <ProgressBar
        android:id="@+id/add_expenses_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />


    <ScrollView
        android:id="@+id/add_expenses_form_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/add_expenses_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/field_margin_bottom">

                <EditText
                    android:id="@+id/add_expenses_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/prompt_date"
                    android:ems="10"
                    android:inputType="date" />

                <Button
                    android:id="@+id/add_expenses_pick_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/action_pick_date" />

            </android.support.design.widget.TextInputLayout>


            <TextView
                android:id="@+id/add_expenses_categories_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/prompt_category" />

            <Spinner
                android:id="@+id/add_expenses_categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="@dimen/field_margin_bottom" />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".7"
                android:layout_marginBottom="@dimen/field_margin_bottom">

                <EditText
                    android:id="@+id/add_expenses_money"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_wallet_money"
                    android:inputType="numberDecimal" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/add_expenses_wallets_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/prompt_wallet" />

            <Spinner
                android:id="@+id/add_expenses_wallets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="@dimen/field_margin_bottom" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_expenses_choosen_expenses"
                android:textStyle="bold"/>


            <Spinner
                android:id="@+id/add_expenses_categories_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".7">

                <EditText
                    android:id="@+id/add_expenses_money_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_wallet_money"
                    android:inputType="numberDecimal" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".7"
                android:layout_marginBottom="@dimen/field_margin_bottom">

                <EditText
                    android:id="@+id/add_expenses_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_comment"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>



            <Button
                android:id="@+id/add_expenses_btn_add_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/action_add_detail" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/add_expenses_list_of_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/add_expenses_btn_add_bill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_add_bill" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>